letter-spacing fixed for rows

--- a/sass/typo/_output.scss
+++ b/sass/typo/_output.scss
@@ -194,8 +194,10 @@
 @mixin rr-typo-reset($font-size: null) {
 	font-size: 0;
 	line-height: 0;
+	letter-spacing: 0;
 
 	& > * {
+		letter-spacing: normal;
 		@include rr-typo-size($font-size);
 	}
 }
